[nanocloud/0.7.x] Improving instrumentation support - added BlockingBarrier hook option to builder - fixed bug in VectorFuture (it has never worked sic.) - added tests for barrier instrumentation
git-svn-id: https://gridkit.googlecode.com/svn/grid-lab/branches/vicluster-0.7.5@3059 4e96dbfe-9890-11de-ac5d-73b9d092dc0a